--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## nii_data"
+    "## nii data"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## b_values"
+    "## b-values"
    ]
   },
   {
@@ -89,10 +89,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_values[(b_values >= 9_950) & (b_values <= 10_050)] = 10_000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.unique(b_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_values_unique = np.unique(b_values[b_values > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(b_values_unique)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## direction_vectors"
+    "## direction vectors"
    ]
   },
   {
@@ -128,15 +164,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_sphere_surface(radius):\n",
+    "def create_sphere(radius):\n",
     "    \n",
     "    theta = np.linspace(0,2.*np.pi,100)\n",
     "    phi = np.linspace(0,np.pi,100)\n",
+    "\n",
     "    x = radius * np.outer(np.cos(theta),np.sin(phi))\n",
     "    y = radius * np.outer(np.sin(theta),np.sin(phi))\n",
     "    z = radius * np.outer(np.ones(np.size(theta)),np.cos(phi))\n",
+    "\n",
+    "    spere = go.Surface(x=x, y=y, z=z, colorscale='Greys', showscale=False, opacity=0.1)\n",
     "    \n",
-    "    return x, y, z"
+    "    return spere"
    ]
   },
   {
@@ -146,11 +185,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Create sphere surface\n",
-    "x, y, z = create_sphere_surface(radius=1)\n",
-    "spere = go.Surface(x=x, y=y, z=z, colorscale='Greys', showscale=False, opacity=0.1)\n",
+    "sphere = create_sphere(radius=1)\n",
     "\n",
-    "# Create scatter plot\n",
     "scatter = go.Scatter3d(\n",
     "    x=direction_vectors[:,0],\n",
     "    y=direction_vectors[:,1],\n",
@@ -159,12 +195,12 @@
     "    marker=dict(\n",
     "        size=3,\n",
     "        color=np.linalg.norm(direction_vectors, axis=1),\n",
-    "        colorscale='Picnic',\n",
+    "        colorscale=[(0, 'blue'), (1, 'red')],\n",
     "    ),\n",
     ")\n",
     "\n",
-    "# Create figure\n",
-    "fig = go.Figure(data=[spere, scatter])\n",
+    "\n",
+    "fig = go.Figure(data=[sphere, scatter])\n",
     "\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
@@ -179,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## b_values * direction_vectors"
+    "## magnitude vectors"
    ]
   },
   {
@@ -197,27 +233,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create sphere surfaces\n",
     "spheres = []\n",
-    "for b_value in np.unique(b_values):\n",
-    "    x, y, z = create_sphere_surface(b_value)\n",
-    "    spheres.append(go.Surface(x=x, y=y, z=z, colorscale='Greys', showscale=False, opacity=0.1))\n",
+    "scatters = []\n",
     "\n",
-    "# Create scatter plot\n",
-    "scatter = go.Scatter3d(\n",
-    "    x=magnitude_vectors[:,0],\n",
-    "    y=magnitude_vectors[:,1],\n",
-    "    z=magnitude_vectors[:,2],\n",
-    "    mode='markers',\n",
-    "    marker=dict(\n",
-    "        size=3,\n",
-    "        color=np.linalg.norm(magnitude_vectors, axis=1),\n",
-    "        colorscale='Viridis',\n",
-    "    ),\n",
-    ")\n",
+    "for b_value in b_values_unique:\n",
     "\n",
-    "# Add scatter plot and spheres surface to figure\n",
-    "fig = go.Figure(data=[scatter]+spheres)\n",
+    "    label = f'b-value: {b_value:,.0f}'.replace(',', '_')\n",
+    "\n",
+    "    sphere = create_sphere(b_value)\n",
+    "    sphere.update(showlegend=False, legendgroup=label)\n",
+    "    spheres.append(sphere)\n",
+    "\n",
+    "    magnitude_vectors_subset = magnitude_vectors[b_values == b_value, :]\n",
+    "    print(f'b-value {b_value:.0f} - {magnitude_vectors_subset.shape[0]} directions')\n",
+    "    \n",
+    "    scatter = go.Scatter3d(\n",
+    "        x=magnitude_vectors_subset[:, 0],\n",
+    "        y=magnitude_vectors_subset[:, 1],\n",
+    "        z=magnitude_vectors_subset[:, 2],\n",
+    "        mode='markers',\n",
+    "        marker=dict(\n",
+    "            size=4,\n",
+    "        ),\n",
+    "        name=label,\n",
+    "        legendgroup=label,\n",
+    "    )\n",
+    "    scatters.append(scatter)\n",
+    "\n",
+    "\n",
+    "fig = go.Figure(data=scatters+spheres)\n",
     "\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
@@ -232,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## voxel_data"
+    "## voxel data"
    ]
   },
   {
@@ -265,42 +309,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## voxel_magnitude_vectors"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voxel_magnitude_vectors = np.multiply(voxel_data[:, np.newaxis], magnitude_vectors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create scatter plot\n",
-    "scatter = go.Scatter3d(\n",
-    "    x=voxel_magnitude_vectors[:,0],\n",
-    "    y=voxel_magnitude_vectors[:,1],\n",
-    "    z=voxel_magnitude_vectors[:,2],\n",
-    "    mode='markers',\n",
-    "    marker=dict(\n",
-    "        size=3,\n",
-    "        color=np.linalg.norm(voxel_magnitude_vectors, axis=1),\n",
-    "        colorscale='Viridis',\n",
-    "    ),\n",
-    ")\n",
+    "spheres = []\n",
+    "scatters = []\n",
     "\n",
-    "# Add scatter plot and spheres surface to figure\n",
-    "fig = go.Figure(data=[scatter])\n",
+    "for b_value in b_values_unique:\n",
+    "\n",
+    "    label = f'b-value: {b_value:,.0f}'.replace(',', '_')\n",
+    "\n",
+    "    sphere = create_sphere(b_value)\n",
+    "    sphere.update(showlegend=False, legendgroup=label)\n",
+    "    spheres.append(sphere)\n",
+    "\n",
+    "    magnitude_vectors_subset = magnitude_vectors[b_values == b_value, :]\n",
+    "    voxel_data_subset = voxel_data[b_values == b_value]\n",
+    "    voxel_data_subset_normalized = (voxel_data_subset - voxel_data_subset.min()) / (voxel_data_subset.max() - voxel_data_subset.min())\n",
+    "    \n",
+    "    scatter = go.Scatter3d(\n",
+    "        x=magnitude_vectors_subset[:, 0],\n",
+    "        y=magnitude_vectors_subset[:, 1],\n",
+    "        z=magnitude_vectors_subset[:, 2],\n",
+    "        mode='markers',\n",
+    "        marker=dict(\n",
+    "            size=15 * voxel_data_subset_normalized,\n",
+    "            color=voxel_data_subset_normalized,\n",
+    "            colorscale=[(0, 'blue'), (1, 'red')],\n",
+    "        ),\n",
+    "        name=label,\n",
+    "        legendgroup=label,\n",
+    "        showlegend=False,\n",
+    "    )\n",
+    "    scatters.append(scatter)\n",
+    "\n",
+    "    scatter = go.Scatter3d(\n",
+    "        x=[None],\n",
+    "        y=[None],\n",
+    "        z=[None],\n",
+    "        mode='markers',\n",
+    "        marker=dict(\n",
+    "            size=0,\n",
+    "            color='white',\n",
+    "        ),\n",
+    "        name=label,\n",
+    "        legendgroup=label,\n",
+    "    )\n",
+    "    scatters.append(scatter)\n",
+    "\n",
+    "\n",
+    "fig = go.Figure(data=scatters+spheres)\n",
     "\n",
     "fig.update_layout(\n",
     "    autosize=False,\n",
