separate and synced voxel data subplots + small changes

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import nibabel as nib\n",
     "import numpy as np\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "from scipy.interpolate import Rbf\n",
+    "from plotly.subplots import make_subplots"
    ]
   },
   {
@@ -85,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.unique(b_values))"
+    "print(*zip(*np.unique(b_values, return_counts=True)))"
    ]
   },
   {
@@ -103,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.unique(b_values))"
+    "b_values_nz_unique, _ = np.unique(b_values[b_values > 0], return_counts=True)"
    ]
   },
   {
@@ -112,16 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b_values_unique = np.unique(b_values[b_values > 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(b_values_unique)"
+    "print(*zip(b_values_nz_unique, _))"
    ]
   },
   {
@@ -184,7 +177,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "sphere = create_sphere(radius=1)\n",
     "\n",
     "scatter = go.Scatter3d(\n",
@@ -206,6 +198,12 @@
     "    autosize=False,\n",
     "    width=800,\n",
     "    height=800,\n",
+    "    hovermode=False,\n",
+    "    scene=dict(\n",
+    "        xaxis=dict(showspikes=False),\n",
+    "        yaxis=dict(showspikes=False),\n",
+    "        zaxis=dict(showspikes=False)\n",
+    "    ),\n",
     ")\n",
     "\n",
     "fig.show()"
@@ -236,7 +234,7 @@
     "spheres = []\n",
     "scatters = []\n",
     "\n",
-    "for b_value in b_values_unique:\n",
+    "for b_value in b_values_nz_unique:\n",
     "\n",
     "    label = f'b-value: {b_value:,.0f}'.replace(',', '_')\n",
     "\n",
@@ -245,7 +243,6 @@
     "    spheres.append(sphere)\n",
     "\n",
     "    magnitude_vectors_subset = magnitude_vectors[b_values == b_value, :]\n",
-    "    print(f'b-value {b_value:.0f} - {magnitude_vectors_subset.shape[0]} directions')\n",
     "    \n",
     "    scatter = go.Scatter3d(\n",
     "        x=magnitude_vectors_subset[:, 0],\n",
@@ -267,6 +264,14 @@
     "    autosize=False,\n",
     "    width=800,\n",
     "    height=800,\n",
+    "    hovermode=False,\n",
+    "    **{\n",
+    "        f'scene{i+1}': dict(\n",
+    "            xaxis=dict(showspikes=False),\n",
+    "            yaxis=dict(showspikes=False),\n",
+    "            zaxis=dict(showspikes=False)\n",
+    "        ) for i in range(len(b_values_nz_unique))\n",
+    "    }\n",
     ")\n",
     "\n",
     "fig.show()"
@@ -299,13 +304,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Histogram(x=voxel_data)])\n",
-    "fig.show()"
+    "#### Together"
    ]
   },
   {
@@ -317,7 +319,7 @@
     "spheres = []\n",
     "scatters = []\n",
     "\n",
-    "for b_value in b_values_unique:\n",
+    "for b_value in b_values_nz_unique:\n",
     "\n",
     "    label = f'b-value: {b_value:,.0f}'.replace(',', '_')\n",
     "\n",
@@ -366,6 +368,190 @@
     "    autosize=False,\n",
     "    width=800,\n",
     "    height=800,\n",
+    "    hovermode=False,\n",
+    "    **{\n",
+    "        f'scene{i+1}': dict(\n",
+    "            xaxis=dict(showspikes=False),\n",
+    "            yaxis=dict(showspikes=False),\n",
+    "            zaxis=dict(showspikes=False)\n",
+    "        ) for i in range(len(b_values_nz_unique))\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Separate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_b_values = len(b_values_nz_unique)\n",
+    "\n",
+    "# Create subplot figure\n",
+    "fig = make_subplots(\n",
+    "    rows=1, \n",
+    "    cols=num_b_values, \n",
+    "    specs=[[{'type': 'scene', 'is_3d':True}]*num_b_values], \n",
+    "    subplot_titles=[f'b-value: {b_value:,.0f}'.replace(',', '_') for b_value in b_values_nz_unique],\n",
+    ")\n",
+    "\n",
+    "for i, b_value in enumerate(b_values_nz_unique):\n",
+    "\n",
+    "    label = f'b-value: {b_value:,.0f}'.replace(',', '_')\n",
+    "\n",
+    "    # Create sphere\n",
+    "    sphere = create_sphere(b_value)\n",
+    "    sphere.update(showlegend=False, legendgroup=label)\n",
+    "\n",
+    "    # Create scatter\n",
+    "    magnitude_vectors_subset = magnitude_vectors[b_values == b_value, :]\n",
+    "    voxel_data_subset = voxel_data[b_values == b_value]\n",
+    "    voxel_data_subset_normalized = (voxel_data_subset - voxel_data_subset.min()) / (voxel_data_subset.max() - voxel_data_subset.min())\n",
+    "    \n",
+    "    scatter = go.Scatter3d(\n",
+    "        x=magnitude_vectors_subset[:, 0],\n",
+    "        y=magnitude_vectors_subset[:, 1],\n",
+    "        z=magnitude_vectors_subset[:, 2],\n",
+    "        mode='markers',\n",
+    "        marker=dict(\n",
+    "            size=15 * voxel_data_subset_normalized,\n",
+    "            color=voxel_data_subset_normalized,\n",
+    "            colorscale=[(0, 'blue'), (1, 'red')],\n",
+    "        ),\n",
+    "        name=label,\n",
+    "        legendgroup=label,\n",
+    "        showlegend=False,\n",
+    "    )\n",
+    "\n",
+    "    # Add scatter and sphere\n",
+    "    fig.add_trace(scatter, row=1, col=i+1)\n",
+    "    fig.add_trace(sphere, row=1, col=i+1)\n",
+    "\n",
+    "# Update layout\n",
+    "fig.update_layout(\n",
+    "    autosize=True,\n",
+    "    hovermode=False,\n",
+    "    **{\n",
+    "        f'scene{i+1}': dict(\n",
+    "        xaxis=dict(showspikes=False),\n",
+    "        yaxis=dict(showspikes=False),\n",
+    "        zaxis=dict(showspikes=False)\n",
+    "    ) for i in range(num_b_values)},\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Synchronized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "from dash.dependencies import Input, Output\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    dcc.Graph(\n",
+    "        id='3d-plot',\n",
+    "        figure=deepcopy(fig),\n",
+    "    )\n",
+    "])\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('3d-plot', 'figure'),\n",
+    "    [Input('3d-plot', 'relayoutData')]\n",
+    ")\n",
+    "def update_subplots(relayoutData):\n",
+    "    if relayoutData:\n",
+    "        for key in relayoutData.keys():\n",
+    "            if key.startswith('scene') and key.endswith('.camera'):           \n",
+    "                app.layout.children[0].figure.update_layout(\n",
+    "                    **{\n",
+    "                        f'scene{i+1}': dict(\n",
+    "                            camera=relayoutData[key],\n",
+    "                    ) for i in range(num_b_values)},\n",
+    "                )\n",
+    "                break        \n",
+    "    return app.layout.children[0].figure\n",
+    "\n",
+    "app.run_server(debug=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## spherical density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a grid of (theta, phi) angles\n",
+    "theta = np.linspace(0, 2*np.pi, 100)\n",
+    "phi = np.linspace(0, np.pi, 100)\n",
+    "theta, phi = np.meshgrid(theta, phi)\n",
+    "\n",
+    "# Given radius\n",
+    "radius = 1  # replace with your radius\n",
+    "\n",
+    "# Convert these angles to Cartesian coordinates (x, y, z)\n",
+    "x_grid = radius * np.sin(phi) * np.cos(theta)\n",
+    "y_grid = radius * np.sin(phi) * np.sin(theta)\n",
+    "z_grid = radius * np.cos(phi)\n",
+    "\n",
+    "# Your voxel data\n",
+    "intensity = voxel_data  # replace with your voxel data\n",
+    "\n",
+    "# Your direction vectors\n",
+    "x = direction_vectors[:, 0]\n",
+    "y = direction_vectors[:, 1]\n",
+    "z = direction_vectors[:, 2]\n",
+    "\n",
+    "# Use radial basis function interpolation to estimate the intensity\n",
+    "rbf = Rbf(x, y, z, intensity, function='multiquadric', smooth=1)\n",
+    "intensity_grid = rbf(x_grid, y_grid, z_grid)\n",
+    "\n",
+    "# Create a go.Surface object with the Cartesian coordinates and the interpolated intensities\n",
+    "surface = go.Surface(x=x_grid, y=y_grid, z=z_grid, surfacecolor=intensity_grid, colorscale='Viridis')\n",
+    "\n",
+    "fig = go.Figure(data=[surface])\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=800,\n",
+    "    height=800,\n",
+    "    hovermode=False,\n",
+    "    scene=dict(\n",
+    "        xaxis=dict(showspikes=False),\n",
+    "        yaxis=dict(showspikes=False),\n",
+    "        zaxis=dict(showspikes=False)\n",
+    "    ),\n",
     ")\n",
     "\n",
     "fig.show()"
