from ground truth d_tensors to simulated normalized_noisy_signals

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,15 +8,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "S0 in range [100, 2_000] with 100 std around mean S0 of the voxel  \n",
-    "b either 0 or 1_000  \n",
-    "100 gradient vectors uniformly distributed on sphere  \n",
-    "10 measurements for b = 0 per voxel  \n",
-    "100 measurements for b = 1_000 per voxel  \n",
-    "1_000_000 voxels in total  "
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from typing import Tuple\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -25,84 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from typing import Tuple\n",
-    "import scipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def exp_model(S0: float, b: float, D: np.ndarray, g: np.ndarray) -> float:\n",
-    "    '''\n",
-    "    Implements the Stejskal-Tanner equation.\n",
-    "\n",
-    "    Parameters:\n",
-    "    S0 (float): The baseline signal intensity.\n",
-    "    b (float): The b-value.\n",
-    "    D (numpy.ndarray): The diffusion tensor. Shape (3, 3).\n",
-    "    g (numpy.ndarray): The gradient vector. Shape (3,).\n",
-    "\n",
-    "    Returns:\n",
-    "    S (float): The expected signal intensity.\n",
-    "    '''\n",
-    "\n",
-    "    return S0 * np.exp(-b * g @ D @ g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_single_S0(lower_bound: float, upper_bound: float) -> float:\n",
-    "    '''\n",
-    "    Chooses a random S0 value from a uniform distribution.\n",
-    "\n",
-    "    Parameters:\n",
-    "    lower_bound (float): The lower bound of the uniform distribution.\n",
-    "    upper_bound (float): The upper bound of the uniform distribution.\n",
-    "\n",
-    "    Returns:\n",
-    "    S0 (float): The chosen S0 value.\n",
-    "    '''\n",
-    "\n",
-    "    return np.random.uniform(lower_bound, upper_bound)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_multiple_S0(mean_S0: float, std_S0: float, n: int) -> np.ndarray:\n",
-    "    '''\n",
-    "    Samples n S0 values from a normal distribution.\n",
-    "\n",
-    "    Parameters:\n",
-    "    mean_S0 (float): The mean of the normal distribution.\n",
-    "    std_S0 (float): The standard deviation of the normal distribution.\n",
-    "    n (int): The number of samples to take.\n",
-    "\n",
-    "    Returns:\n",
-    "    S0 (numpy.ndarray): The sampled S0 values. Shape (n,).\n",
-    "    '''\n",
-    "\n",
-    "    return np.random.normal(mean_S0, std_S0, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sample_gradients(n: int) -> np.ndarray:\n",
+    "def sample_gradients(n: int) -> torch.Tensor:\n",
     "    '''\n",
     "    Samples n gradient vectors from a uniform distribution on the unit sphere.\n",
     "\n",
@@ -110,22 +35,31 @@
     "    n (int): The number of gradient vectors to sample.\n",
     "\n",
     "    Returns:\n",
-    "    g (numpy.ndarray): The sampled gradient vectors. Shape (n, 3).\n",
+    "    g (torch.Tensor): The sampled gradient vectors. Shape (n, 3).\n",
     "    '''\n",
     "\n",
+    "    # Save the current state of the random number generator\n",
+    "    state = torch.random.get_rng_state()\n",
+    "\n",
+    "    # Set the seed\n",
+    "    torch.manual_seed(0)\n",
+    "\n",
     "    # Sample n angles from a uniform distribution on [0, 2pi].\n",
-    "    theta_angles = np.random.uniform(0, 2 * np.pi, n)\n",
+    "    theta_angles = torch.rand(n) * 2 * torch.pi\n",
     "\n",
     "    # Sample n angles from a uniform distribution on [0, pi].\n",
-    "    phi_angles = np.random.uniform(0, np.pi, n)\n",
+    "    phi_angles = torch.rand(n) * torch.pi\n",
     "\n",
     "    # Convert the angles to cartesian coordinates.\n",
-    "    x = np.sin(phi_angles) * np.cos(theta_angles)\n",
-    "    y = np.sin(phi_angles) * np.sin(theta_angles)\n",
-    "    z = np.cos(phi_angles)\n",
+    "    x = torch.sin(phi_angles) * torch.cos(theta_angles)\n",
+    "    y = torch.sin(phi_angles) * torch.sin(theta_angles)\n",
+    "    z = torch.cos(phi_angles)\n",
     "\n",
     "    # Stack the coordinates together\n",
-    "    g = np.stack((x, y, z), axis=-1)\n",
+    "    g = torch.stack((x, y, z), dim=-1)\n",
+    "\n",
+    "    # Restore the state of the random number generator\n",
+    "    torch.random.set_rng_state(state)\n",
     "\n",
     "    return g"
    ]
@@ -133,28 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "single_S0 = sample_single_S0(0, 1000)\n",
-    "print(single_S0)\n",
-    "multiple_S0 = sample_multiple_S0(single_S0, 100, 10)\n",
-    "print(multiple_S0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gradients = sample_gradients(10)\n",
-    "print(gradients)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,17 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.66% correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "correct = 0\n",
@@ -325,17 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "34.91% correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "correct = 0\n",
@@ -385,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,17 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19.41% correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "correct = 0\n",
@@ -510,17 +398,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30.56% correct\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "correct = 0\n",
@@ -560,6 +440,73 @@
     "    total += 1\n",
     "    \n",
     "print(f'{100*correct/total:.2f}% correct')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lstsq_results: dict[Tuple[float, float, float], np.ndarray]\n",
+    "\n",
+    "with open('lstsq_results.pkl', 'rb') as f:\n",
+    "    lstsq_results = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 300446/300446 [00:51<00:00, 5815.48it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_b_0 = 10\n",
+    "num_b_1k = 128\n",
+    "SNR = 20\n",
+    "\n",
+    "b_values = torch.tensor([0.0] * num_b_0 + [1_000.0] * num_b_1k) # shape (num_b_0 + num_b_1k,)\n",
+    "gradients = sample_gradients(num_b_0 + num_b_1k) # shape (num_b_0 + num_b_1k, 3)\n",
+    "\n",
+    "d_tensors = []\n",
+    "normalized_noisy_signals = []\n",
+    "\n",
+    "for d_array in tqdm(lstsq_results.values()):\n",
+    "\n",
+    "    d_tensor = torch.tensor(d_array).float() # shape (3, 3)\n",
+    "\n",
+    "    signal = torch.exp(- b_values * torch.einsum('bi, bij, bj -> b', \n",
+    "                                                  gradients, \n",
+    "                                                  d_tensor.unsqueeze(0).repeat(num_b_0 + num_b_1k, 1, 1),\n",
+    "                                                  gradients\n",
+    "                                                  )) # shape (num_b_0 + num_b_1k,)\n",
+    "    \n",
+    "    noise = torch.normal(mean=torch.zeros_like(signal), std=torch.ones_like(signal) / SNR) # shape (num_b_0 + num_b_1k,)\n",
+    "\n",
+    "    noisy_signal = signal + noise # shape (num_b_0 + num_b_1k,)\n",
+    "\n",
+    "    normalized_noisy_signal = noisy_signal / torch.mean(noisy_signal[:num_b_0]) # shape (num_b_0 + num_b_1k,)\n",
+    "\n",
+    "    d_tensors.append(d_tensor)\n",
+    "    normalized_noisy_signals.append(normalized_noisy_signal)\n",
+    "\n",
+    "d_tensors = torch.stack(d_tensors) # shape (num_d_tensors, 3, 3)\n",
+    "normalized_noisy_signals = torch.stack(normalized_noisy_signals) # shape (num_d_tensors, num_b_0 + num_b_1k)"
    ]
   }
  ],
