replaced "polar" with "spectral" for correctness

--- a/representations.ipynb
+++ b/representations.ipynb
@@ -40,10 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def polar_decomposition(D: torch.Tensor) \\\n",
+    "def spectral_decomposition(D: torch.Tensor) \\\n",
     "    -> Tuple[torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor, torch.Tensor]:\n",
     "    '''\n",
-    "    Calculates the polar decomposition parameters of a diffusion tensor.\n",
+    "    Calculates the spectral decomposition parameters of a diffusion tensor.\n",
     "\n",
     "    Parameters:\n",
     "    D (torch.Tensor): The diffusion tensor. Shape (3, 3).\n",
@@ -83,12 +83,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def polar_composition(\n",
+    "def spectral_composition(\n",
     "        angle_x: torch.Tensor, angle_y: torch.Tensor, angle_z: torch.Tensor,\n",
     "        eig_val_1: torch.Tensor, eig_val_2: torch.Tensor, eig_val_3: torch.Tensor\n",
     "    ) -> torch.Tensor:\n",
     "    '''\n",
-    "    Reconstructs the tensor diffusion tensor from the polar decomposition parameters.\n",
+    "    Reconstructs the tensor diffusion tensor from the spectral decomposition parameters.\n",
     "    \n",
     "    Parameters:\n",
     "    angle_x (torch.Tensor): The angle of rotation around the x-axis.\n",
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "# polar decomposition - test 1\n",
+    "# spectral decomposition - test 1\n",
     "\n",
     "total = 0\n",
     "correct = 0\n",
@@ -166,7 +166,7 @@
     "        print(i, 'No Cholesky decomposition!')\n",
     "        break\n",
     "\n",
-    "    D_ = polar_composition(*polar_decomposition(D))\n",
+    "    D_ = spectral_composition(*spectral_decomposition(D))\n",
     "\n",
     "    if torch.allclose(D, D_):\n",
     "        correct += 1\n",
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "# polar decomposition - test 2\n",
+    "# spectral decomposition - test 2\n",
     "\n",
     "total = 0\n",
     "correct = 0\n",
@@ -208,7 +208,7 @@
     "    eig_val_3 = torch.rand(1) * eig_val_2\n",
     "\n",
     "    # reconstruct diffusion tensor\n",
-    "    D = polar_composition(x_angles, y_angles, z_angles, eig_val_1, eig_val_2, eig_val_3)\n",
+    "    D = spectral_composition(x_angles, y_angles, z_angles, eig_val_1, eig_val_2, eig_val_3)\n",
     "\n",
     "    # check if the tensor has Cholesky decomposition\n",
     "    try:\n",
@@ -218,10 +218,10 @@
     "        break\n",
     "\n",
     "    # decompose the tensor\n",
-    "    angle_x_, angle_y_, angle_z_, eig_val_1_, eig_val_2_, eig_val_3_ = polar_decomposition(D)\n",
+    "    angle_x_, angle_y_, angle_z_, eig_val_1_, eig_val_2_, eig_val_3_ = spectral_decomposition(D)\n",
     "\n",
     "    # reconstruct the tensor\n",
-    "    D_ = polar_composition(angle_x_, angle_y_, angle_z_, eig_val_1_, eig_val_2_, eig_val_3_)\n",
+    "    D_ = spectral_composition(angle_x_, angle_y_, angle_z_, eig_val_1_, eig_val_2_, eig_val_3_)\n",
     "\n",
     "    if torch.allclose(D, D_):\n",
     "        correct += 1\n",
