--- a/train with sim data for d-tensor loss.ipynb
+++ b/train with sim data for d-tensor loss.ipynb
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PolarDiffusionNet(torch.nn.Module):\n",
+    "class SpectralDiffusionNet(torch.nn.Module):\n",
     "    \n",
     "    def __init__(self, input_size: int):\n",
     "        super().__init__()\n",
@@ -386,9 +386,9 @@
    "source": [
     "# (re)set the model, loss function, optimizer and buffers\n",
     "\n",
-    "polar_dnet = PolarDiffusionNet(input_size=signals.shape[1]).to(device)\n",
+    "spectral_dnet = SpectralDiffusionNet(input_size=signals.shape[1]).to(device)\n",
     "loss_fn = torch.nn.MSELoss()\n",
-    "optimizer = torch.optim.AdamW(polar_dnet.parameters(), lr=lr)\n",
+    "optimizer = torch.optim.AdamW(spectral_dnet.parameters(), lr=lr)\n",
     "\n",
     "train_losses = []\n",
     "val_losses = []\n",
@@ -426,8 +426,8 @@
     "\n",
     "for epoch in range(last_epoch, last_epoch + num_epochs):\n",
     "        \n",
-    "      epoch_train_loss, train_time = train(train_loader, polar_dnet, loss_fn, optimizer, device)\n",
-    "      epoch_val_loss, eval_time = validate(val_loader, polar_dnet, loss_fn, device)\n",
+    "      epoch_train_loss, train_time = train(train_loader, spectral_dnet, loss_fn, optimizer, device)\n",
+    "      epoch_val_loss, eval_time = validate(val_loader, spectral_dnet, loss_fn, device)\n",
     "\n",
     "      train_losses.append(epoch_train_loss)\n",
     "      val_losses.append(epoch_val_loss)\n",
